--- a/src/index.css
+++ b/src/index.css
@@ -37,8 +37,13 @@ body {
   font-size: 1rem;
 }
 
+.book p {
+  margin: 1rem 0 0.5rem;
+}
+
 @media screen and (min-width: 768px) {
   .booklist {
     grid-template-columns: repeat(3, 1fr);
+    align-items: start;
   }
 }
