--- a/src/index.css
+++ b/src/index.css
@@ -25,6 +25,7 @@ body {
   border-radius: 1rem;
   padding: 2rem;
   text-align: center;
+  position: relative;
 }
 
 .book img {
@@ -39,6 +40,18 @@ body {
 
 .book p {
   margin: 1rem 0 0.5rem;
+}
+
+.number {
+  position: absolute;
+  top: 0;
+  left: 0;
+  padding: 0.75rem;
+  font-size: 1rem;
+  border-top-left-radius: 1rem;
+  border-bottom-right-radius: 1rem;
+  background-color: #c35600;
+  color: #fff;
 }
 
 @media screen and (min-width: 768px) {
